Add Neo4j getEdgeAttrs impl and isolated thput bench code