@@ -72,6 +72,7 @@ for tuned in true; do
 
 #benchNhbrThput=T
 #benchNeighborAtypeThput=T
+benchEdgeAttrsThput=T
 #benchNhbrNodeThput=T
 #benchNodeThput=T
 #benchNodeNodeThput=T
@@ -251,6 +252,28 @@ for JVM_HEAP in 6900; do
         x=$(cut -d' ' -f1 ${o} | awk '{ sum += $1 } END { print sprintf("%.1f", sum) }')
         echo ${thputThreads} clients, $x aggregated queries/sec >> ${o}
         mv ${o} neo4j_throughput_get_nhbrs_atype-tuned_${tuned}-${thputThreads}clients.txt
+      fi
+
+    if [[ -n "$benchEdgeAttrsThput" ]]; then
+        # sleep 2 && sync && sudo sh -c 'echo 3 > /proc/sys/vm/drop_caches'
+        # find ${NEO4J_DIR}/${DATASET}/ -name "*store.db*" -type f -exec dd if={} of=/dev/null bs=1M 2>/dev/null \;
+        java -verbose:gc -server -XX:+UseConcMarkSweepGC -Xmx${JVM_HEAP}m -cp ${classpath} \
+            edu.berkeley.cs.succinctgraph.neo4jbench.BenchNeighborAtype \
+            edgeAttrs-throughput \
+            ${NEO4J_DIR}/${DATASET} \
+            ${QUERY_DIR}/neighborAtype_warmup_${num_nodes}.txt \
+            ${QUERY_DIR}/neighborAtype_query_${num_nodes}.txt \
+            DUMMY \
+            ${warmup_edgeAttrs} \
+            ${measure_edgeAttrs} \
+            ${thputThreads} \
+            ${tuned} \
+            ${pageCacheIgnoreIndexes}
+
+        o=neo4j_throughput_getEdgeAttrs.txt
+        x=$(cut -d' ' -f1 ${o} | awk '{ sum += $1 } END { print sprintf("%.1f", sum) }')
+        echo ${thputThreads} clients, $x aggregated queries/sec >> ${o}
+        mv ${o} neo4j_throughput_getEdgeAttrs-tuned_${tuned}-${thputThreads}clients.txt
       fi
 
       if [[ -n "$benchNhbrNodeThput" ]]; then
